--- a/src/components/popular-template/PopularTemplate.module.css
+++ b/src/components/popular-template/PopularTemplate.module.css
@@ -7,7 +7,6 @@
 }
 
 .title svg {
-  margin-left: 4px;
   fill: #42526e;
 }
 
@@ -18,6 +17,7 @@
 }
 
 .paper {
+  position: relative;
   height: 4rem;
   width: 8rem;
 }
@@ -28,4 +28,28 @@
   display: block;
   border-radius: 2px;
   object-fit: cover;
+}
+
+.button-modele {
+  min-width: 0;
+  font-size: 0.45rem;
+  font-weight: 500;
+  color: #42526e;
+  text-transform: capitalize;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 2px 6px;
+  border-radius: 3px;
+  position: absolute;
+  top: 6px;
+  left: 4px;
+}
+
+.paper p {
+  margin: 0;
+  position: absolute;
+  top: 22px;
+  left: 4px;
+  color: white;
+  font-weight: 500;
+  font-size: small;
 }
