--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.wrapper {
+  margin: 0 auto;
+  padding: 0 0.5rem;
+  display: grid;
+  min-height: calc(100vh - 5rem);
+  grid-auto-flow: column;
+  overflow: scroll;
+}
