--- a/src/components/Column/ColumnBoard.scss
+++ b/src/components/Column/ColumnBoard.scss
@@ -1,23 +1,30 @@
-$finalHeight: 250px;
-$finalWidth: 3 * $finalHeight;
-$scrollBarHeight: 1px;
-
-::-webkit-scrollbar {
-    width: $scrollBarHeight;
-    height: $scrollBarHeight;
-  }
-
-.board-lists {
-    display: grid;
-    grid-auto-columns: 272px;
-    grid-auto-flow: column;
-    overflow: scroll;
-}
+.input-container {
+    width: 100%;
+    max-width: 300px;
+    margin-right: 0.5rem;
+    margin-top: 76px;
   
-.board-list {
-    background-color: rgb(235, 236, 240);
-    border-radius: 3px;
-    padding: 10px;
-    margin-top: 30px;
-    margin-left: 20px;
+    .input-content {
+      width: 100%;
+      max-width: 300px;
+      border-radius: 5px;
+      background-color: #ebecf0;
+      padding: 0.5rem 0;
+      opacity: 0.8;
+  
+      button {
+        cursor: pointer;
+        background: none;
+        width: 100%;
+        padding: 0.5rem;
+        border: none;
+        margin: auto;
+        text-align: left;
+        font-size: 14px;
+      }
+  
+      &:hover {
+        background-color: #ddd;
+      }
+    }
 }
