--- a/src/components/Column/ColumnList.scss
+++ b/src/components/Column/ColumnList.scss
@@ -5,7 +5,8 @@
     margin-top: 75px;
   
     .title-list {
-      padding: 1rem 1rem 0;
+      padding: 0rem 1rem;
+      padding-top: 5px;
     }
   
     .container-cards {
